--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -15,15 +15,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: List files for debugging
+      run: ls -al
+      working-directory: .
+
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: 1.6.0
 
     - name: Terraform Init
-      run:  |
-        ls -al
-        terraform init
+      run: terraform init
       working-directory: .
 
     - name: Terraform Apply
