--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -17,7 +17,7 @@ jobs:
 
     - name: List files for debugging
       run: ls -al
-      working-directory: .
+      working-directory: main.tf
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
@@ -26,7 +26,7 @@ jobs:
 
     - name: Terraform Init
       run: terraform init
-      working-directory: .
+      working-directory: main.tf
 
     - name: Terraform Apply
       run: |
@@ -34,4 +34,4 @@ jobs:
           -var="aws_region=$AWS_REGION" \
           -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
           -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-      working-directory: .
+      working-directory: main.tf
