--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,7 +1,9 @@
 name: Terraform Apply – EC2
 
 on:
-  workflow_dispatch:  # manual trigger
+  push:
+    branches:
+      - main
 
 jobs:
   terraform:
